2010-02-23  Stephan Aßmus  <superstippi@gmx.de>

        Reviewed by Eric Seidel.

        [Haiku] Fix various issues in keyboard event generation.
        https://bugs.webkit.org/show_bug.cgi?id=34685

        Covered by existing tests.

        Fixed backspace keycode.
        Fixed using the appropriate fields from the Haiku event for mapping
        to the VK_* codes and added mapping a great deal more codes.
        Added extraction of modifier key flags.
        Completed implementation of disambiguateKeyDownEvent()
        Implemented currentCapsLockState().

        * platform/haiku/PlatformKeyboardEventHaiku.cpp:
        (WebCore::keyIdentifierForHaikuKeyCode):
        (WebCore::windowsKeyCodeForKeyEvent):
        (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        (WebCore::PlatformKeyboardEvent::disambiguateKeyDownEvent):
        (WebCore::PlatformKeyboardEvent::currentCapsLockState):

2010-02-23  Steve Block  <steveblock@google.com>

        Reviewed by Darin Adler.

        Adds Client::cancelGeolocationPermissionRequestForFrame and ChromeClient::cancelGeolocationPermissionRequestForFrame
        https://bugs.webkit.org/show_bug.cgi?id=34962

        These methods are required so that a Geolocation object can cancel an
        asynchronous permission request. This allows the chrome client to cancel
        any UI it is showing for the permission request.

        No new tests, as this is for the purposes of browser UI only.

        * loader/EmptyClients.h: Modified
        (WebCore::EmptyChromeClient::cancelGeolocationPermissionRequestForFrame): Added
        * page/Chrome.cpp: Modified.
        (WebCore::Chrome::cancelGeolocationPermissionRequestForFrame): Added
        * page/Chrome.h: Modified.
        * page/ChromeClient.h: Modified.
        (WebCore::ChromeClient::cancelGeolocationPermissionRequestForFrame): Added
        * page/Geolocation.cpp: Modified.